--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,10 +26,10 @@ jobs:
            fetch-depth: 0
       
       # Runs a single command using the runners shell
-      - name: Setup Java 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
+     # - name: Setup Java 11
+     #   uses: actions/setup-java@v1
+     #   with:
+     #     java-version: 11
 
       #- name: Cache Docker images
       #  uses: satackey/action-docker-layer-caching@v0.0.11
