--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -9,35 +9,37 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - uses: sonarsource/sonarqube-scan-action@master
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-          WORKSPACE: ${{ secrets.SONAR_WORKSPACE }}
+          - name: Checkout
+            uses: actions/checkout@v2
+#      - name: Prepare structure for Maven
+#        run: mvn -B archetype:generate -DarchetypeGroupId=org.apache.maven.archetypes -DgroupId=com.mcnz.maven -DartifactId=install-maven-tutorial
+#      - name: Build project with Maven
+#        run: mvn clean install
+          - name: Depcheck
+            uses: dependency-check/Dependency-Check_Action@main
+            id: Depcheck
+            with:
+            project: 'prueba'
+            path: '.'
+            format: 'HTML'
+          - name: Upload Test results
+            uses: actions/upload-artifact@master
+            with:
+          - name: Depcheck report
+            path: ${{github.workspace}}/reports
+          - name: Checkout2
+            uses: actions/checkout@v2
+            with:
+            fetch-depth: 0
+          - name: SonarScan
+            uses: sonarsource/sonarqube-scan-action@master
+            env:
+            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+            SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+            WORKSPACE: ${{ secrets.SONAR_WORKSPACE }}
       # If you wish to fail your job when the Quality Gate is red, uncomment the
       # following lines. This would typically be used to fail a deployment.
       # - uses: sonarsource/sonarqube-quality-gate-action@master
       #   timeout-minutes: 5
       #   env:
       #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      - name: Checkout
-        uses: actions/checkout@v2
-#      - name: Prepare structure for Maven
-#        run: mvn -B archetype:generate -DarchetypeGroupId=org.apache.maven.archetypes -DgroupId=com.mcnz.maven -DartifactId=install-maven-tutorial
-#      - name: Build project with Maven
-#        run: mvn clean install
-      - name: Depcheck
-        uses: dependency-check/Dependency-Check_Action@main
-        id: Depcheck
-        with:
-          project: 'prueba'
-          path: '.'
-          format: 'HTML'
-      - name: Upload Test results
-        uses: actions/upload-artifact@master
-        with:
-           name: Depcheck report
-           path: ${{github.workspace}}/reports
