--- a/.github/workflows/new4.yml
+++ b/.github/workflows/new4.yml
@@ -28,7 +28,7 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-          WORKSPACE: ${{ secrets.SONAR_WORKSPACE }}
+#          WORKSPACE: ${{ secrets.SONAR_WORKSPACE }}
       # If you wish to fail your job when the Quality Gate is red, uncomment the
       # following lines. This would typically be used to fail a deployment.
       # - uses: sonarsource/sonarqube-quality-gate-action@master
