--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,2 @@
 sonar.projectKey=maxbeltr_prueba_AYGrnVIf2RBXLwNiHiaD
+sonar.dependencyCheck.htmlReportPath=/github/workspace/reports/dependency-check-report.html
