--- a/.github/workflows/DownloadArtifact.yml
+++ b/.github/workflows/DownloadArtifact.yml
@@ -1,10 +1,19 @@
-- name: Download artifact
-  uses: dawidd6/action-download-artifact@v2
-  with:
+name: Download Artifact
+on:
+  workflow_dispatch:
+    branches:
+      - main # or the name of your main branch
+jobs:
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    steps:
+     - uses: dawidd6/action-download-artifact@v2
+       with:
     # Optional, GitHub token, a Personal Access Token with `public_repo` scope if needed
     # Required, if artifact is from a different repo
     # Required, if repo is private a Personal Access Token with `repo` scope is needed
-    github_token: ${{secrets.GITHUB_TOKEN}}
+         github_token: ${{secrets.GITHUB_TOKEN}}
     # Required, workflow file name or ID
     workflow: SastScan.yml
     # Optional, the status or conclusion of a completed workflow to search for
