--- a/.github/workflows/DownloadArtifact.yml
+++ b/.github/workflows/DownloadArtifact.yml
@@ -21,7 +21,7 @@ jobs:
     #   "failure", "success", "neutral", "cancelled", "skipped", "timed_out", "action_required"
     # Or a workflow status:
     #   "completed", "in_progress", "queued"
-    workflow_conclusion: success
+    #workflow_conclusion: success
     # Optional, will get head commit SHA
     pr: ${{github.event.pull_request.number}}
     # Optional, no need to specify if PR is
