--- a/.github/workflows/DownloadArtifact.yml
+++ b/.github/workflows/DownloadArtifact.yml
@@ -1,8 +1,9 @@
 name: Download Artifact
 on:
-  workflow_dispatch:
-    branches:
-      - main # or the name of your main branch
+  workflow_run:
+    workflows: [SastScan]
+    types:
+      - completed
 jobs:
   build:
     name: Build
@@ -15,7 +16,7 @@ jobs:
     # Required, if repo is private a Personal Access Token with `repo` scope is needed
          github_token: ${{secrets.GITHUB_TOKEN}}
     # Required, workflow file name or ID
-    workflow: SastScan.yml
+    #workflow: SastScan.yml
     # Optional, the status or conclusion of a completed workflow to search for
     # Can be one of a workflow conclusion:
     #   "failure", "success", "neutral", "cancelled", "skipped", "timed_out", "action_required"
@@ -23,17 +24,17 @@ jobs:
     #   "completed", "in_progress", "queued"
     #workflow_conclusion: success
     # Optional, will get head commit SHA
-    pr: ${{github.event.pull_request.number}}
+    #pr: ${{github.event.pull_request.number}}
     # Optional, no need to specify if PR is
-    commit: ${{github.event.pull_request.head.sha}}
+    #commit: ${{github.event.pull_request.head.sha}}
     # Optional, will use the branch
     branch: main
     # Optional, defaults to all types
-    event: push
+    #event: push
     # Optional, will use specified workflow run
-    run_id: 1122334455
+    #run_id: 1122334455
     # Optional, run number from the workflow
-    run_number: 34
+    #run_number: 34
     # Optional, uploaded artifact name,
     # will download all artifacts if not specified
     # and extract them in respective subdirectories
