--- a/.github/workflows/DownloadArtifact.yml
+++ b/.github/workflows/DownloadArtifact.yml
@@ -16,7 +16,7 @@ jobs:
     # Required, if repo is private a Personal Access Token with `repo` scope is needed
          github_token: ${{secrets.GITHUB_TOKEN}}
     # Required, workflow file name or ID
-         workflow: SastScan.yml
+         workflow: SastScan
     # Optional, the status or conclusion of a completed workflow to search for
     # Can be one of a workflow conclusion:
     #   "failure", "success", "neutral", "cancelled", "skipped", "timed_out", "action_required"
