--- a/.github/workflows/DownloadArtifact.yml
+++ b/.github/workflows/DownloadArtifact.yml
@@ -43,7 +43,7 @@ jobs:
     # will download all artifacts if not specified
     # and extract them in respective subdirectories
     # https://github.com/actions/download-artifact#download-all-artifacts
-    #name: artifact_name
+         name: Depcheck report
     # Optional, directory where to extract artifact(s), defaults to current directory
          #path: /github/workspace/reports/
     # Optional, defaults to current repo
