--- a/.github/workflows/DownloadArtifact.yml
+++ b/.github/workflows/DownloadArtifact.yml
@@ -38,7 +38,7 @@ jobs:
     # Optional, will use specified workflow run
     #run_id: 1122334455
     # Optional, run number from the workflow
-    #run_number: 34
+         run_number: 4
     # Optional, uploaded artifact name,
     # will download all artifacts if not specified
     # and extract them in respective subdirectories
