--- a/.github/workflows/FullScan.yml
+++ b/.github/workflows/FullScan.yml
@@ -28,8 +28,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-project
     steps:
+    - name: Download Artifact
+      uses: actions/download-artifact@v3
+      with:
+        name: DepCheckReport
     - name: Validate Report File Exists
-      run: pwd
+      run: ls -R
     #- name: SonarScan
       #uses: sonarsource/sonarqube-scan-action@master
       #env:
