--- a/.github/workflows/FullScan.yml
+++ b/.github/workflows/FullScan.yml
@@ -34,11 +34,12 @@ jobs:
         name: DepCheckReport
     - name: Validate Report File Exists
       run: ls -R
-    #- name: SonarScan
-      #uses: sonarsource/sonarqube-scan-action@master
-      #env:
-        #SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        #SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+    - name: SonarScan
+      uses: sonarsource/sonarqube-scan-action@master
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+        WORKSPACE: ${{ secrets.WORKSPACE }}
         #WORKSPACE: ${{ secrets.SONAR_WORKSPACE }}
     # If you wish to fail your job when the Quality Gate is red, uncomment the
     # following lines. This would typically be used to fail a deployment.
