--- a/.github/workflows/FullScan.yml
+++ b/.github/workflows/FullScan.yml
@@ -34,12 +34,24 @@ jobs:
         name: DepCheckReport
     - name: Validate Report File Exists
       run: ls -R
+    - name: Checkout source code
+      uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+      - name: Setup Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12
+      - name: Install dependencies
+        run: yarn install
+      - name: Gather Test Coverage
+        run: yarn test-coverage
     - name: SonarScan
       uses: sonarsource/sonarqube-scan-action@master
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-        WORKSPACE: ${{ secrets.WORKSPACE }}
+        #WORKSPACE: ${{ secrets.WORKSPACE }}
         #WORKSPACE: ${{ secrets.SONAR_WORKSPACE }}
     # If you wish to fail your job when the Quality Gate is red, uncomment the
     # following lines. This would typically be used to fail a deployment.
