--- a/.github/workflows/SonarScan.yml
+++ b/.github/workflows/SonarScan.yml
@@ -12,6 +12,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - name: Download Artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: DepCheckReport
       - uses: sonarsource/sonarqube-scan-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
