--- a/.github/workflows/DownloadArtifact.yml
+++ b/.github/workflows/DownloadArtifact.yml
@@ -47,7 +47,7 @@ jobs:
     # Optional, directory where to extract artifact(s), defaults to current directory
          #path: /github/workspace/reports/
     # Optional, defaults to current repo
-         repo: ${{github.repository}}
+         #repo: ${{github.repository}}
     # Optional, check the workflow run whether it has an artifact
     # then will get the last available artifact from previous workflow
     # default false, just try to download from the last one
