--- a/.github/workflows/DownloadArtifact.yml
+++ b/.github/workflows/DownloadArtifact.yml
@@ -38,12 +38,12 @@ jobs:
     # Optional, will use specified workflow run
     #run_id: 1122334455
     # Optional, run number from the workflow
-         run_number: 4
+         #run_number: 4
     # Optional, uploaded artifact name,
     # will download all artifacts if not specified
     # and extract them in respective subdirectories
     # https://github.com/actions/download-artifact#download-all-artifacts
-         #name: Depcheck report
+         name: DepcheckReport
     # Optional, directory where to extract artifact(s), defaults to current directory
          #path: /github/workspace/reports/
     # Optional, defaults to current repo
