--- a/.github/workflows/FullScan.yml
+++ b/.github/workflows/FullScan.yml
@@ -46,6 +46,10 @@ jobs:
         #run: yarn test-coverage
     - name: SonarScan
       uses: sonarsource/sonarqube-scan-action@master
+      with:
+        projectBaseDir: prueba/server
+        args: >
+          -Dproject.settings=/github/workspace/sonar-project.properties
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
