--- a/.github/workflows/sast.yml
+++ b/.github/workflows/sast.yml
@@ -20,6 +20,11 @@ jobs:
         format: 'HTML'
     - name: SonarQube Scan
       uses: sonarsource/sonarqube-scan-action@master
+      with:
+        projectBaseDir: .
+        args: >
+          -Dproject.settings=/github/workspace/sonar-project.properties
+          -Dsonar.projectKey=maxbeltr_prueba_AYGrnVIf2RBXLwNiHiaD
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
