--- a/.github/workflows/sast.yml
+++ b/.github/workflows/sast.yml
@@ -24,7 +24,7 @@ jobs:
         projectBaseDir: .
         args: >
           -Dproject.settings=/github/workspace/sonar-project.properties
-          -Dsonar.projectKey=$SONAR_PROJECT_KEY
+          -Dsonar.projectKey=${SONAR_PROJECT_KEY}
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
